--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 
 <header class="main_header">
-  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}B<span>ef</span>{% endif %}</a>
+  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}专利好袜{% endif %}</a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/about/">About</a>
-    <a href="{{site.baseurl}}/contact/">Contact</a>
+    <a href="{{site.baseurl}}/about/">关于</a>
+    <a href="{{site.baseurl}}/contact/">联系我们</a>
   </nav>
 </header> <!-- End Section Header -->
