--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
   <div class="wrapper">
     {% include social_footer.html %}
     <div class="copyright">
-      <p>&copy; {{site.time | date: '%Y'}} All rights reserved. Design by <a href="https://artemsheludko.github.io" target="_blank">Artem Sheludko</a></p>
+      <a href="https://beian.miit.gov.cn/">鲁ICP备2023025914号-1</a>
+      <p>Copyright &copy; {{site.time | date: '%Y'}} 昌乐恒荣百货 Changle Everglow Emporium, Inc All rights reserved. </p>
     </div>
   </div>
 </footer> <!-- End Section Footer -->
