--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,7 @@
   <div class="wrapper">
     {% include social_footer.html %}
     <div class="copyright">
-      <a href="https://beian.miit.gov.cn/">鲁ICP备2023025914号-1</a>
-      <p>Copyright &copy; {{site.time | date: '%Y'}} 昌乐恒荣百货 Changle Everglow Emporium, Inc All rights reserved. </p>
+      <p><a href="https://beian.miit.gov.cn/">鲁ICP备2023025914号-1</a> Copyright &copy; {{site.time | date: '%Y'}} 昌乐恒荣百货 Changle Everglow Emporium, Inc All rights reserved. </p>
     </div>
   </div>
 </footer> <!-- End Section Footer -->
