--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,8 +2,8 @@
 <section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">
   <div class="wrapper">
     <div class="content">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Enjoy Freedom{% endif %}</h1>
-      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
+      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}袜元素 遇恋 棉皇后 芭贝亲亲{% endif %}</h1>
+      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"真我之美,从容展现" — 富裕玲{% endif %}</h2>
     </div>
   </div>
 </section> <!-- End Section Banner -->
