--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 
 <header class="main_header">
-  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}袜元素 遇恋 棉皇后 芭贝亲亲{% endif %}</a>
+  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}昌乐恒荣百货 | Everglow Emporium{% endif %}</a>
   <nav class="main_menu">
     <a href="{{site.baseurl}}/about/">关于</a>
     <a href="{{site.baseurl}}/contact/">联系我们</a>
