--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}恒荣百货 |Everglow Emporium{% endif %}</a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/about/">关于</a>
+    <a href="{{site.baseurl}}/about/">关于</a><br>
     
-    <a href="#" style="color: #1c1c1c; font-size: 12px;">联系我们吧</a>
+    <a href="#" style="color: #1c1c1c; font-size: 12px;">联系我们吧</a><br>
 
     <a href="{{site.baseurl}}/contact/">联系我们</a><br>
   </nav>
