--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,8 @@
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}恒荣百货 |Everglow Emporium{% endif %}</a>
   <nav class="main_menu">
     <a href="{{site.baseurl}}/about/">关于</a>
-
+  </nav>
+  <nav class="main_menu"></nav>
     <a href="{{site.baseurl}}/contact/">联系我们</a> <br>
-
-    <a href="#" style="color: #1c1c1c; font-size: 20px;">联系我们吧</a>
   </nav>
 </header> <!-- End Section Header -->
