--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
     <a href="{{site.baseurl}}/about/">关于</a>
   </nav>
   <nav class="main_menu"></nav>
-    <a href="{{site.baseurl}}/contact/">联系我们</a> <br>
+    <a href="{{site.baseurl}}/contact/">联系我们</a>
   </nav>
 </header> <!-- End Section Header -->
