--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <nav class="main_menu">
     <a href="{{site.baseurl}}/about/">关于</a>
   </nav>
-  <nav class="main_menu"></nav>
+  <nav class="main_menu">
     <a href="{{site.baseurl}}/contact/">联系我们</a>
   </nav>
 </header> <!-- End Section Header -->
