--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,7 @@
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}恒荣百货 |Everglow Emporium{% endif %}</a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/about/">关于</a>
-  </nav>
-  <br>
-  <nav class="main_menu">
-    <a href="{{site.baseurl}}/contact/">联系我们</a>
+    <a href="{{site.baseurl}}/about/" style="float: left;">关于</a>
+    <a href="{{site.baseurl}}/contact/" style="float: right;">联系我们</a>
   </nav>
 </header> <!-- End Section Header -->
