--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}恒荣百货 |Everglow Emporium{% endif %}</a>
-  <nav class="main_menu">
+  <nav class="main_menu" id="menu">
     <a href="{{site.baseurl}}/contact/" id="touchon">联系我们</a>
     <a href="{{site.baseurl}}/about/" >关于</a>
   </nav>
