--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
       </div>
       <div class="post_description">
         <p class="post_meta">{{page.date}}</p>
-        <h1 class="post_title">{{page.title}}</h1>
+        <h1 class="post_title">{{page.brif}}</h1>
       </div>
     </header> <!-- End Header -->
 
