--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@ layout: default
         <img src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
       </div>
       <div class="post_description">
-        <p class="post_meta">{{page.date}}</p>
-        <h1 class="post_title">{{page.brif}}</h1>
+        <p class="post_meta">{{page.brif}}</p>
+        <h1 class="post_title">{{page.title}}</h1>
       </div>
     </header> <!-- End Header -->
 
