--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,8 +54,8 @@ layout: default
           {% if post.title %}
             <a href="{{ post.url | prepend: site.baseurl }}"
               class="recent_item"
-              style="background-image: url( {{ "/assets/img/" | prepend: site.baseurl | append : post.img}} );background-color: rgba(38, 38, 38, 0.5);">
-                <span>{{ post.title }}</span>
+              style="background-image: url( {{ "/assets/img/" | prepend: site.baseurl | append : post.img}} );">
+                <span style="background-color: rgba(38, 38, 38, 0.5);">{{ post.title }}</span>
             </a>
           {% endif %}
         {% endfor %}
