--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,6 +5,8 @@ layout: default
 
   {% include banner.html %}
 
+  <h2 class="recent_title" style="color: white; font-weight: bolder;">- 主营产品 -</h2>
+
   <main class="page-content" aria-label="Content">
   <section class="chapters cf">
       <div class="wrapper flex-row">
