--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@ layout: default
 
   {% include banner.html %}
 
-  <h2 class="recent_title" style="color: white; font-weight: bolder;">- 主营产品 -</h2>
+  <h2 class="recent_title" style="color: white; font-weight: bolder;text-align:center;"> - 主营产品 - </h2>
 
   <main class="page-content" aria-label="Content">
   <section class="chapters cf">
