--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,9 +4,10 @@ layout: default
   {% include header.html %}
 
   {% include banner.html %}
-  <div>
-    <h2 class="recent_title" style="color: white; font-weight: bolder;text-align:center;"> - 主营产品 - </h2> 
-  </div>
+
+
+  {% include title.html %}
+
   
 
   <main class="page-content" aria-label="Content">
