--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,4 +6,7 @@
       <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"真我之美,从容展现" — 富裕玲{% endif %}</h2>
     </div>
   </div>
+  <div>
+    <h2 class="recent_title" style="color: white; font-weight: bolder;text-align:center;"> - 主营产品 - </h2> 
+  </div>
 </section> <!-- End Section Banner -->
