--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,3 +1,3 @@
-<div>
+<div style="width: 100%;">
     <h2 class="recent_title" style="color: white; font-weight: bolder;text-align:center;"> - 主营产品 - </h2> 
-  </div>
+</div>
