--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     <div class="content">
       <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}袜元素 遇恋 棉皇后 芭贝亲亲{% endif %}</h1>
-      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"真我之美,从容展现" — 富裕玲{% endif %}</h2>
+      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"真我之美,从容展现" — 富裕灵{% endif %}</h2>
     </div>
   </div>
 </section> <!-- End Section Banner -->
