--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ layout: default
           {% if site.website %}
           <span class="author_website"><i class="fa fa-link" aria-hidden="true"></i> <a href="#" target="_blank">{{site.website}}</a></span>
           {% else %}
-          <span class="author_website"><i class="fa fa-link" aria-hidden="true"></i> <a href="#" target="_blank">微信小程序：袜元素商店</a></span>
+          <span class="author_website"><i class="fa fa-link" aria-hidden="true"></i> <a href="https://mp.weixin.qq.com/s/s3cvvGLa5fIj8Trj0gGP0Q" target="_blank">微信小程序：袜元素商店</a></span>
           {% endif %}            
         </div>
       </div>
