--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,15 @@ layout: default
   <article class="post">
     <header>
       
-        {% if post.img %}
+        {% if post.link %}
+        <div class="post_image">
+          <img src="{{post.link}}" alt="{{post.title}}">
+        </div>
+        
+        {% else %}
         <div class="post_image">
           <img src={{ "/assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
         </div>
-        {% else %}
-
         {% endif %}
 
       <div class="post_description">
