--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ layout: default
   <article class="post">
     <header>
       
-        <div class="post_image" id = "img">
-          <img src={{ "/assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+        <div class="post_image">
+          <img src={{ "/assets/img/" | prepend: site.baseurl | append : post.img}} alt="{{post.title}}">
         </div>
 
 
