--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <header>
       
         <div class="post_image">
-          <img src={{ "/assets/img/" | prepend: site.baseurl | append : post.img}} alt="{{post.title}}">
+          <img src="{{ "/assets/img/" | prepend: site.baseurl | append : post.img}}" alt="{{post.title}}">
         </div>
 
 
