--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <header>
       
 
-        {% if post.link %}
+        {% if page.link %}
         <div class="post_image" id="link">
           <img src="{{page.link}}" alt="{{page.title}}">
         </div>      
