--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -2,6 +2,7 @@
 <ul class="social_footer">
 
   <img src="miniQRcode.png" style="height: 100%;">
+  <a>扫码关注公众号</a>
 
   {% if site.google_url %}
   <li><a href="{{ site.google_url }}" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a></li>
