--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -1,7 +1,7 @@
 
 <ul class="social_footer">
 
-  <img src="miniQRcode.png" style="height: 100%;">
+  <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;">
   <a>扫码关注公众号</a>
 
   {% if site.google_url %}
