--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -1,22 +1,6 @@
 
 <ul class="social_footer">
 
-  <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;">
-  <a>扫码关注公众号</a>
+  <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;"> 扫码关注公众号
 
-  {% if site.google_url %}
-  <li><a href="{{ site.google_url }}" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a></li>
-  {% else %}
-  <li><a href="#" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a></li>      
-  {% endif %}
-  {% if site.twitter_url %}
-  <li><a href="{{ site.twitter_url }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-  {% else %}
-  <li><a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-  {% endif %}
-  {% if site.instagram_url %}
-  <li><a href="{{ site.instagram_url }}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-  {% else %}
-  <li><a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-  {% endif %}
 </ul>
