--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -1,6 +1,15 @@
 
 <ul class="social_footer">
 
-  <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;"> 扫码关注公众号
+  
+  <li>
+    <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;"> 
+  </li>
+  <li>
+    <img src="/iwys/assets/img/shopQRcode.png" style="height: 100%;"> 
+  </li>
+  <li>
+    <img src="/iwys/assets/img/wxQRcode.png" style="height: 100%;"> 
+  </li>
 
 </ul>
