--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -3,13 +3,15 @@
 
   
   <li>
-    <img src="/iwys/assets/img/miniQRcode.png" style="height: 100%;"> 
+    <img src="/iwys/assets/img/miniQRcode.png" > 
   </li>
+  <li></li>
   <li>
-    <img src="/iwys/assets/img/shopQRcode.png" style="height: 100%;"> 
+    <img src="/iwys/assets/img/shopQRcode.png" > 
   </li>
+  <li></li>
   <li>
-    <img src="/iwys/assets/img/wxQRcode.png" style="height: 100%;"> 
+    <img src="/iwys/assets/img/wxQRcode.png" > 
   </li>
 
 </ul>
