--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4919,8 +4919,8 @@ cite {
 
 @media only screen and (max-width: 400px) {
   .wechat {
-    width: 50%;
-    height: auto;
+    width: 40%;
+    height: 50%;
   }
 
 }
