--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4919,6 +4919,11 @@ cite {
 
 @media only screen and (max-width: 400px) {
   .wechat {
+    width: 80%;
+    height: 80%;
+  }
+  .lili
+  {
     width: 20%;
     height: 20%;
   }
