--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4929,3 +4929,14 @@ cite {
   }
 
 }
+@media only screen and (min-width: 800px) {
+  .wechat {
+    width: 100%;
+    height: 100%;
+  }
+    .lili
+  {
+    width: 40%;
+    height: auto;
+  }
+}
