--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -3,15 +3,17 @@
 
   
   <li class="lili">
-    <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> 
+    <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
+    微信小程序
   </li>
   <li></li>
   <li class="lili">
-    <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> 
+    <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> <br>
+    微信公众号
   </li>
   <li></li>
   <li class="lili">
-    <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> 
+    <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
+    微信小商店
   </li>
-
 </ul>
