--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4948,3 +4948,10 @@ cite {
     height: auto;
   }
 }
+
+@media only screen and (min-width: 810px) and (max-width: 1200px ){
+  .socialsologn{
+    font-size: small;
+  }
+  
+}
