--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -4,18 +4,18 @@
   
   <li class="lili">
     <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
-    <a style="color: white;margin-top: 2%;" class="socialsologn">微信小程序</a>
+    <a style="color: white;margin-top: 2%;" id="socialsologn">微信小程序</a>
   </li>
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> <br>
-    <a style="color: white;margin-top: 2%;" class="socialsologn">微信公众号</a>
+    <a style="color: white;margin-top: 2%;" id="socialsologn">微信公众号</a>
     
   </li>
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
-    <a style="color: white;margin-top: 2%;" class="socialsologn">微信小商店</a>
+    <a style="color: white;margin-top: 2%;" id="socialsologn">微信小商店</a>
     
   </li>
 </ul>
