--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -4,7 +4,10 @@
   
   <li class="lili">
     <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
-    <a style="color: white;margin-top: 2%;" id="socialsologn">微信小程序</a>
+    <div>
+      <a style="color: white;margin-top: 2%;" id="socialsologn">微信小程序</a>
+    </div>
+    
   </li>
   <li></li>
   <li class="lili">
