--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -4,7 +4,7 @@
   
   <li class="lili">
     <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
-    <div id="socialsologn">
+    <div id="socialsologn1">
       <a style="color: white;margin-top: 2%;" >微信小程序</a>
     </div>
     
@@ -12,7 +12,7 @@
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> <br>
-    <div id="socialsologn">
+    <div id="socialsologn2">
       <a style="color: white;margin-top: 2%;" >微信公众号</a>
     </div>
     
@@ -21,7 +21,7 @@
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
-    <div id="socialsologn">
+    <div id="socialsologn3">
       <a style="color: white;margin-top: 2%;" >微信小商店</a>
     </div>
     
