--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -21,8 +21,8 @@
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
-    <div id="socialsologn3">
-      <a style="color: white;margin-top: 2%;" >微信小商店</a>
+    <div >
+      <a style="color: white;margin-top: 2%;" id="socialsologn3">微信小商店</a>
     </div>
     
     
