--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -22,7 +22,7 @@
   <li class="lili">
     <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
     <div >
-      <a style="color: white;margin-top: 2%;" id="socialsologn3">微信小商店</a>
+      <a style="color: white;margin-top: 2%; display: none;" id="socialsologn3">微信小商店</a>
     </div>
     
     
