--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -4,16 +4,16 @@
   
   <li class="lili">
     <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
-    <div id="socialsologn1">
-      <a style="color: white;margin-top: 2%;" >微信小程序</a>
+    <div>
+      <a style="color: white;margin-top: 2%;display: none;" id="socialsologn1">微信小程序</a>
     </div>
     
   </li>
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> <br>
-    <div id="socialsologn2">
-      <a style="color: white;margin-top: 2%;" >微信公众号</a>
+    <div>
+      <a style="color: white;margin-top: 2%;display: none;id="socialsologn2"" >微信公众号</a>
     </div>
     
     
@@ -21,7 +21,7 @@
   <li></li>
   <li class="lili">
     <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
-    <div >
+    <div>
       <a style="color: white;margin-top: 2%; display: none;" id="socialsologn3">微信小商店</a>
     </div>
     
