--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -3,7 +3,7 @@
 
   
   <li class="lili">
-    <img src="/iwys/assets/img/miniQRcode.png" class="wechat"> <br>
+    <img src="{{site.baseurl}}/assets/img/miniQRcode.png" class="wechat"> <br>
     <div>
       <a style="color: white;margin-top: 2%;display: none;" id="socialsologn1">微信小程序</a>
     </div>
@@ -11,7 +11,7 @@
   </li>
   <li></li>
   <li class="lili">
-    <img src="/iwys/assets/img/wxQRcode.png" class="wechat"> <br>
+    <img src="{{site.baseurl}}/assets/img/wxQRcode.png" class="wechat"> <br>
     <div>
       <a style="color: white;margin-top: 2%;display: none;" id="socialsologn2">微信公众号</a>
     </div>
@@ -20,7 +20,7 @@
   </li>
   <li></li>
   <li class="lili">
-    <img src="/iwys/assets/img/shopQRcode.png" class="wechat"> <br>
+    <img src="{{site.baseurl}}/assets/img/shopQRcode.png" class="wechat"> <br>
     <div>
       <a style="color: white;margin-top: 2%; display: none;" id="socialsologn3">微信小商店</a>
     </div>
